# LifeScale

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  start.bat  stop.bat
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  load-env.bat  pom.xml
desktop/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: fs_ops.rs  lib.rs  lifescale_db.rs  main.rs  sync_db.rs  watcher.rs
desktop/src/app/: App.css  App.tsx
docker/: .env.production.example  .env.staging.example  README.md  docker-compose.full.yml  docker-compose.staging.yml  docker-compose.yml
docker/nginx/: DEPLOY.md
docs/: README.md
docs/architecture/: 开源仓库架构.md  技术架构.md
docs/database/: Daily数据架构.md  schema.sql
docs/deployment/: 客户端打包指南.md
mobile/: README.md  flutter_launcher_icons-beta.yaml  flutter_launcher_icons-prod.yaml  pubspec.yaml
mobile/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
mobile/docs/: 历史占位说明.md  运行与调试指南.md
mobile/lib/: main.dart
mobile/scripts/: boot_emulator.bat  build_apk.bat  run.bat
scripts/dev/: README.md  build-android.bat  build-android.ps1  build-desktop.bat  build-desktop.ps1  gen-icons.bat  gen-icons.ps1
(+346 files in other folders)
